--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,29 +5,45 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+
 jobs:
   blocking:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Secrets scan (placeholder)
-        run: echo 'TODO: add gitleaks with pinned SHA'
-      - name: Lint/format (placeholder)
-        run: echo 'TODO: add fast lint/format'
-      - name: Type check (placeholder)
-        run: echo 'TODO: add fast type check on changed files'
-      - name: Tests (placeholder)
-        run: echo 'TODO: run targeted tests'
-      - name: Smoke build (placeholder)
-        run: echo 'TODO: minimal build/start check'
-      - name: Conventional commits (placeholder)
-        run: echo 'TODO: check PR title/commits'
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      - name: Secrets scan (gitleaks)
+        uses: gitleaks/gitleaks-action@ff98106e4c7b2bc287b24eaf42907196329070c7
+        with:
+          args: detect --source . --no-banner --redact
+      - name: Semantic PR title
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: amannn/action-semantic-pull-request@48f256284bd46cdaab1048c3721360e808335d50
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   smart_blocks:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Smart blocks (schema/security/api drift)
-        run: echo 'TODO: add path‑based checks'
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+      - name: Path filters
+        id: changes
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
+        with:
+          filters: |
+            schema:
+              - 'schema/**'
+            public_api:
+              - 'public_api/**'
+            security:
+              - 'security/**'
+      - name: Schema guard (placeholder)
+        if: steps.changes.outputs.schema == 'true'
+        run: echo 'TODO: add schema compat checks'
+      - name: API doc drift (placeholder)
+        if: steps.changes.outputs.public_api == 'true'
+        run: echo 'TODO: validate API docs drift'
