--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,32 @@ jobs:
         uses: amannn/action-semantic-pull-request@48f256284bd46cdaab1048c3721360e808335d50
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  advisory_smartblocks:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        with:
+          fetch-depth: 0
+      - name: Path filters
+        id: changes
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
+        with:
+          filters: |
+            schema:
+              - 'schema/**'
+            public_api:
+              - 'public_api/**'
+            security:
+              - 'security/**'
+      - name: Schema guard (placeholder)
+        if: steps.changes.outputs.schema == 'true'
+        run: echo 'TODO: add schema compat checks'
+      - name: API doc drift (placeholder)
+        if: steps.changes.outputs.public_api == 'true'
+        run: echo 'TODO: validate API docs drift'
+      - name: Security path tests (placeholder)
+        if: steps.changes.outputs.security == 'true'
+        run: echo 'TODO: run targeted security checks'
