ci(docs): make docs checks stable (disable MD013; ignore external links offline)

--- a/.lychee.toml
+++ b/.lychee.toml
@@ -3,6 +3,7 @@ max-concurrency = 4
 request-timeout = 20
 # Skip shields.io and badges which throttle
 exclude = [
+  '^https?://',
   'https://img.shields.io/*'
 ]
 # Treat rate-limited as warnings
