--- a/templates/ci/semantic-pr.yml
+++ b/templates/ci/semantic-pr.yml
@@ -1,16 +1,19 @@
-name: semantic-pr (example)
+name: semantic-pr
 
 on:
   pull_request:
+    types: [opened, edited, synchronize, reopened, ready_for_review]
 
+# Ensure the workflow can post the required status on fresh repos
 permissions:
   contents: read
+  pull-requests: read
+  statuses: write
 
 jobs:
-  semantic_pr:
+  check:
     runs-on: ubuntu-latest
     steps:
-      - name: Semantic PR title
-        uses: amannn/action-semantic-pull-request@48f256284bd46cdaab1048c3721360e808335d50
+      - uses: amannn/action-semantic-pull-request@0d326f2a77431f47202778779dada9c2522d142c # v5.5.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
