--- a/templates/ci/pr-size-guard.yml
+++ b/templates/ci/pr-size-guard.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Compute PR diff size
         uses: actions/github-script@v7
+        env:
+          PR_SIZE_WARN: ${{ vars.PR_SIZE_WARN }}
+          PR_SIZE_HARD: ${{ vars.PR_SIZE_HARD }}
         with:
           script: |
             const pr = context.payload.pull_request;
@@ -22,11 +25,24 @@ jobs:
 
             const files = await github.paginate(github.rest.pulls.listFiles, { owner: context.repo.owner, repo: context.repo.repo, pull_number: pr.number, per_page: 100 });
 
-            let additions = 0, deletions = 0, changes = 0;
             const docsOnly = files.length > 0 && files.every(f => /^(docs\/|.*\.md$)/.test(f.filename));
-            for (const f of files) { additions += f.additions; deletions += f.deletions; changes += f.changes; }
+            const { additions, deletions, changes } = files.reduce((acc, f) => {
+              acc.additions += f.additions;
+              acc.deletions += f.deletions;
+              acc.changes += f.changes;
+              return acc;
+            }, { additions: 0, deletions: 0, changes: 0 });
 
-            core.summary.addHeading('PR Size Guard').addTable([[{data:'Files',header:true}, files.length.toString()], [{data:'Additions',header:true}, additions.toString()], [{data:'Deletions',header:true}, deletions.toString()], [{data:'Changed lines',header:true}, changes.toString()], [{data:'Docs-only',header:true}, docsOnly ? 'yes':'no']]).write();
+            core.summary
+              .addHeading('PR Size Guard')
+              .addTable([
+                [{ data: 'Files', header: true }, files.length.toString()],
+                [{ data: 'Additions', header: true }, additions.toString()],
+                [{ data: 'Deletions', header: true }, deletions.toString()],
+                [{ data: 'Changed lines', header: true }, changes.toString()],
+                [{ data: 'Docs-only', header: true }, docsOnly ? 'yes' : 'no']
+              ])
+              .write();
 
             const HARD = parseInt(process.env.PR_SIZE_HARD || '800', 10);
             const WARN = parseInt(process.env.PR_SIZE_WARN || '400', 10);
@@ -34,12 +50,3 @@ jobs:
             if (docsOnly) { core.notice('Docs-only change detected; size guard not enforced.'); return; }
             if (changes > HARD) { core.setFailed(`PR too large: ${changes} changed lines > ${HARD}. Please split into smaller PRs.`); return; }
             if (changes > WARN) { core.warning(`Large PR: ${changes} changed lines > ${WARN}. Consider splitting or justifying in the description.`); }
-
-      - name: Finalize
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.notice('PR size guard completed.');
-        env:
-          PR_SIZE_WARN: ${{ vars.PR_SIZE_WARN }}
-          PR_SIZE_HARD: ${{ vars.PR_SIZE_HARD }}
